<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.home.AddPostBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSheetButtonTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sheet_bottom_home"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextSheetButtonPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/sheet_bottom_home_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextSheetButtonPostBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/sheet_bottom_home_body"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/choose_photo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewSheetButtonImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        tools:src="@tools:sample/backgrounds/scenic"
        android:background="@color/white"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatButton
       android:layout_gravity="center"
        android:id="@+id/buttonChoosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:text="@string/choose_photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sheet_bottom_home_save" />

</LinearLayout>
